remove brunch and elm

--- a/apps/todoop_ui/lib/todoop_ui/templates/layout/app.html.eex
+++ b/apps/todoop_ui/lib/todoop_ui/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello TodoopUi!</title>
+    <title>Todoop</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
