--- a/apps/todoop_ui/lib/todoop_ui/templates/layout/app.html.eex
+++ b/apps/todoop_ui/lib/todoop_ui/templates/layout/app.html.eex
@@ -8,12 +8,11 @@
     <meta name="author" content="">
 
     <title>Todoop</title>
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
     <%= render @view_module, @view_template, assigns %>
 
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/app.js") %>"></script>
   </body>
 </html>
