--- a/apps/todoop_ui/lib/todoop_ui/templates/layout/app.html.eex
+++ b/apps/todoop_ui/lib/todoop_ui/templates/layout/app.html.eex
@@ -13,6 +13,6 @@
   <body>
     <%= render @view_module, @view_template, assigns %>
 
-    <script src="<%= static_path(@conn, "/app.js") %>"></script>
+    <script src="<%= static_url(@conn, "/app.js") %>"></script>
   </body>
 </html>
